# alarm-clock

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: clocks.rs  inputs.rs  main.rs  outputs.rs  serial_commands.rs
src/clocks/: datetime.rs  dcf77.rs  rtc.rs  timer.rs
src/clocks/dcf77/: phase_detector.rs  polled_values.rs  protocol.rs
src/outputs/: buzzer.rs  display.rs  led_strip.rs
