[package]
name = "alarm-clock"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "alarm-clock"
test = false
bench = false

[dependencies]
avr-device = "0.5.3"
embedded-hal = "0.2.7"
max7219 = "0.4.0"
ringbuffer = { version = "0.15.0", default-features = false }
ufmt = "0.2.0"
shared-bus = "0.3.1"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "1a0040dc07d37054ccaa93d43a9d2db5f46da3b2"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "z"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
